CostalCloud/force-app/main/default/objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>A_Post_Installation_Picture_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A Post-Installation Picture Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_Pre_Installation_Picture_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A Pre-Installation Picture Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Labor__c</fullName>
        <label>Additional Labor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Basic_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Board Up Charge (Labor Only)</fullName>
                </value>
                <value>
                    <fullName>Cut Away From Existing Transom (Jobsite Quote, Enter QTY Needed)</fullName>
                </value>
                <value>
                    <fullName>Cut Back Base (Extensive, Multi‐Layered)</fullName>
                </value>
                <value>
                    <fullName>Cut Back Flooring (Carpet)</fullName>
                </value>
                <value>
                    <fullName>Cut Back Flooring (Wood)</fullName>
                </value>
                <value>
                    <fullName>Cut Back Flooring (Tile)</fullName>
                </value>
                <value>
                    <fullName>Cut Back Sheetrock/Paneling Return/Plaster Return</fullName>
                </value>
                <value>
                    <fullName>Cut Back Siding</fullName>
                </value>
                <value>
                    <fullName>Door Flashing / Water Deterrent Membrane</fullName>
                </value>
                <value>
                    <fullName>Drip Cap / Head Flashing</fullName>
                </value>
                <value>
                    <fullName>Electronic / Baldwin Lockset (ea) (Customer Responsible for Programing)</fullName>
                </value>
                <value>
                    <fullName>Equipment Rental (Jobsite Quote, Enter QTY Needed)</fullName>
                </value>
                <value>
                    <fullName>Fabricate Interior Returns</fullName>
                </value>
                <value>
                    <fullName>Fire Rated Door Install</fullName>
                </value>
                <value>
                    <fullName>Full Aluminum Wrap ‐ Double (In‐Stock Colors)</fullName>
                </value>
                <value>
                    <fullName>Full Aluminum Wrap ‐ Single (In‐Stock Colors)</fullName>
                </value>
                <value>
                    <fullName>Full Aluminum Wrap ‐ Unit with Sidelights (In‐Stock Colors)</fullName>
                </value>
                <value>
                    <fullName>Full Capping W / AZAK (Brickmold, 1X and Jamb)</fullName>
                </value>
                <value>
                    <fullName>Install Into Block/Masonry Opening</fullName>
                </value>
                <value>
                    <fullName>Modify Masonry Opening or True Brick Opening (Jobsite Quote, Enter QTY Needed)</fullName>
                </value>
                <value>
                    <fullName>Modify Rough Opening to Accommodate Door Unit, 3&quot; Max (Labor Only)</fullName>
                </value>
                <value>
                    <fullName>Reinstall Standard Doorbell</fullName>
                </value>
                <value>
                    <fullName>Re‐Use Basic Existing Trim/Casing on Exterior</fullName>
                </value>
                <value>
                    <fullName>Re‐Use Bsaic Existing Trim/Casing on Interior</fullName>
                </value>
                <value>
                    <fullName>Sill Pan Installation - up to 38&quot;</fullName>
                </value>
                <value>
                    <fullName>Slab Cut (Exterior Only, Unfinished Wood Only)</fullName>
                </value>
                <value>
                    <fullName>Sub‐Floor Work (Labor Only ‐ Jobsite Quote, Enter QTY Needed)</fullName>
                </value>
                <value>
                    <fullName>Threshold Support (Wood/Concrete/PVC/Cedar)</fullName>
                </value>
                <value>
                    <fullName>Windstorm Install - Single</fullName>
                </value>
                <value>
                    <fullName>Move/Replace J‐Chanel (Per Side)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Each__c</fullName>
        <label>Amount Each</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_Design_Concerns__c</fullName>
        <label>Any Design Concerns?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_building_codes_that_apply_to_unit__c</fullName>
        <label>Any building codes that apply to unit?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Impact Rating</fullName>
                </value>
                <value>
                    <fullName>20 Min Fire</fullName>
                </value>
                <value>
                    <fullName>45 Min Fire</fullName>
                </value>
                <value>
                    <fullName>60 Min Fire</fullName>
                </value>
                <value>
                    <fullName>90 Min Fire</fullName>
                </value>
                <value>
                    <fullName>Pool Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backset__c</fullName>
        <label>Backset</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2-3/8”</fullName>
                </value>
                <value>
                    <fullName>2-3/4”</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Basic_Labor__c</fullName>
        <label>Basic Labor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRE-HUNG DOOR UP TO 38X98</fullName>
                </value>
                <value>
                    <fullName>SINGLE SLAB DOOR UP TO 45X98</fullName>
                </value>
                <value>
                    <fullName>EXT DOOR 39X98 TO 75X98</fullName>
                </value>
                <value>
                    <fullName>PATIO DOOR 39X98 TO 75X98</fullName>
                </value>
                <value>
                    <fullName>PATIO DOOR 76X98 TO 98X98</fullName>
                </value>
                <value>
                    <fullName>FOLDING PATIO DOOR 76X98-98X98</fullName>
                </value>
                <value>
                    <fullName>FOLDING PATIO DOOR UP TO 75X98</fullName>
                </value>
                <value>
                    <fullName>PRE-HUNG DOOR UP TO 72X96</fullName>
                </value>
                <value>
                    <fullName>STORM DOOR UP TO 42X98</fullName>
                </value>
                <value>
                    <fullName>BASIC SECURITY UP TO 42X98</fullName>
                </value>
                <value>
                    <fullName>ANDERSEN LUMINAIRE RETRCT SCRN</fullName>
                </value>
                <value>
                    <fullName>UHD SLIDING PATIO SCREEN</fullName>
                </value>
                <value>
                    <fullName>DOUBLE SLAB DOOR UP TO 72X96</fullName>
                </value>
                <value>
                    <fullName>INSTALL SINGLE SLAB/PREHUNG (PER DOOR)</fullName>
                </value>
                <value>
                    <fullName>INSTALL DOUBLE SLAB/PREHUNG (PER DOOR)</fullName>
                </value>
                <value>
                    <fullName>BI-PASS/BI-FOLD UP TO 72X96 (PER DOOR)</fullName>
                </value>
                <value>
                    <fullName>CROWN / CHAIR RAIL / BASEBOARD / CASING PER LINEAR FOOT, PER LAYER UP TO 9&apos; CEILING</fullName>
                </value>
                <value>
                    <fullName>INSTALLATION OF PANELING UP TO 9&apos; CEILING PER SQFT</fullName>
                </value>
                <value>
                    <fullName>INSTALLATION OF SHIPLAP / WAINSCOTING / CEDAR PLANK, UP TO 9&apos; CEILING PER SQFT</fullName>
                </value>
                <value>
                    <fullName>INSTALL SINGLE WINDOW UP TO 102 U.I. GROUND FLOOR</fullName>
                </value>
                <value>
                    <fullName>INSTALL SINGLE WINDOW 102 U.I. UP TO 132 U.I. GROUND FLOOR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Basic_Line__c</fullName>
        <label>Basic Line #</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_Total__c</fullName>
        <formula>Quantity_Custom__c  *  Amount_Each__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Can_Transom_be_Reused__c</fullName>
        <label>Can Transom be Reused?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Transom__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caption_Additional_Picture__c</fullName>
        <label>Caption: Additional Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Existing_Damage__c</fullName>
        <label>Caption: Existing Damage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Exterior__c</fullName>
        <label>Caption: Exterior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Interior__c</fullName>
        <label>Caption: Interior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Post_Install_Additional_Picture__c</fullName>
        <label>Caption: Post-Install Additional Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Post_Install_Exterior_Overview__c</fullName>
        <label>Caption: Post-Install Exterior Overview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Post_Install_Interior_Overview__c</fullName>
        <label>Caption: Post-Install Interior Overview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Post_Install_Picture_2__c</fullName>
        <label>Caption: Post-Install Picture 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Post_Install_Picture__c</fullName>
        <label>Caption: Post-Install Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Post_Repair_Additional_Picture__c</fullName>
        <label>Caption: Post-Repair Additional Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Post_Repair_Overview__c</fullName>
        <label>Caption: Post-Repair Overview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Pre_Install_Additional_Picture__c</fullName>
        <label>Caption: Pre-Install Additional Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Pre_Install_Exterior_Overview__c</fullName>
        <label>Caption: Pre-Install Exterior Overview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Pre_Install_Interior_Overview__c</fullName>
        <label>Caption: Pre-Install Interior Overview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Pre_Repair_Additional_Picture__c</fullName>
        <label>Caption: Pre-Repair Additional Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Pre_Repair_Overview__c</fullName>
        <label>Caption: Pre-Repair Overview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption_Threshold__c</fullName>
        <label>Caption: Threshold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caution_Tape__c</fullName>
        <label>Caution Tape</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ceiling_Height__c</fullName>
        <label>Ceiling Height</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>72&quot;</fullName>
                </value>
                <value>
                    <fullName>73&quot;</fullName>
                </value>
                <value>
                    <fullName>74&quot;</fullName>
                </value>
                <value>
                    <fullName>75&quot;</fullName>
                </value>
                <value>
                    <fullName>76&quot;</fullName>
                </value>
                <value>
                    <fullName>77&quot;</fullName>
                </value>
                <value>
                    <fullName>78&quot;</fullName>
                </value>
                <value>
                    <fullName>79&quot;</fullName>
                </value>
                <value>
                    <fullName>80&quot;</fullName>
                </value>
                <value>
                    <fullName>81&quot;</fullName>
                </value>
                <value>
                    <fullName>82&quot;</fullName>
                </value>
                <value>
                    <fullName>83&quot;</fullName>
                </value>
                <value>
                    <fullName>84&quot;</fullName>
                </value>
                <value>
                    <fullName>85&quot;</fullName>
                </value>
                <value>
                    <fullName>86&quot;</fullName>
                </value>
                <value>
                    <fullName>87&quot;</fullName>
                </value>
                <value>
                    <fullName>88&quot;</fullName>
                </value>
                <value>
                    <fullName>89&quot;</fullName>
                </value>
                <value>
                    <fullName>90&quot;</fullName>
                </value>
                <value>
                    <fullName>91&quot;</fullName>
                </value>
                <value>
                    <fullName>92&quot;</fullName>
                </value>
                <value>
                    <fullName>93&quot;</fullName>
                </value>
                <value>
                    <fullName>94&quot;</fullName>
                </value>
                <value>
                    <fullName>95&quot;</fullName>
                </value>
                <value>
                    <fullName>96&quot;</fullName>
                </value>
                <value>
                    <fullName>97&quot;</fullName>
                </value>
                <value>
                    <fullName>98&quot;</fullName>
                </value>
                <value>
                    <fullName>99&quot;</fullName>
                </value>
                <value>
                    <fullName>100&quot;</fullName>
                </value>
                <value>
                    <fullName>101&quot;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certs__c</fullName>
        <label>Certs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Order_Description__c</fullName>
        <label>Change Order Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chips_and_Debris__c</fullName>
        <label>Chips and Debris</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleaned_After_Reno__c</fullName>
        <label>Cleaned After Reno</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_Required__c</fullName>
        <label>Code Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Exterior_Trim__c</fullName>
        <label>Current Exterior Trim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Interior_Trim__c</fullName>
        <label>Current Interior Trim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Type__c</fullName>
        <label>Custom Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Plumbing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Selection_Work__c</fullName>
        <label>Customer Selection Work?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Haul_Away__c</fullName>
        <label>Demo/Haul Away</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_short__c</fullName>
        <label>Description (short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Design_Concerns_A__c</fullName>
        <label>Detail Design Concerns A</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detail_Design_Concerns__c</fullName>
        <label>Detail Design Concerns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Does_the_unit_have_a_transom__c</fullName>
        <label>Does the unit have a transom?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_unit_have_sidelites__c</fullName>
        <label>Does the unit have sidelites?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes-1</fullName>
                </value>
                <value>
                    <fullName>Yes-2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doors_Closed_E__c</fullName>
        <label>Doors Closed (E)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doors_Closed_I__c</fullName>
        <label>Doors Closed (I)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dry_Wipes_Used__c</fullName>
        <label>Dry Wipes Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dust_Containment__c</fullName>
        <label>Dust Containment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edge_Prep_Required__c</fullName>
        <label>Edge Prep Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enter_location_of_the_unit__c</fullName>
        <label>Enter Installation Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Front</fullName>
                </value>
                <value>
                    <fullName>Back</fullName>
                </value>
                <value>
                    <fullName>Side</fullName>
                </value>
                <value>
                    <fullName>House to Garage</fullName>
                </value>
                <value>
                    <fullName>Patio</fullName>
                </value>
                <value>
                    <fullName>Living Room</fullName>
                </value>
                <value>
                    <fullName>Dining Room</fullName>
                </value>
                <value>
                    <fullName>Kitchen</fullName>
                </value>
                <value>
                    <fullName>Master Bedroom</fullName>
                </value>
                <value>
                    <fullName>Master Bathroom</fullName>
                </value>
                <value>
                    <fullName>Bedroom 1</fullName>
                </value>
                <value>
                    <fullName>Bedroom 2</fullName>
                </value>
                <value>
                    <fullName>Bedroom 3</fullName>
                </value>
                <value>
                    <fullName>Bedroom 4</fullName>
                </value>
                <value>
                    <fullName>Bath 1</fullName>
                </value>
                <value>
                    <fullName>Bath 2</fullName>
                </value>
                <value>
                    <fullName>Bath 3</fullName>
                </value>
                <value>
                    <fullName>Bath 4</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Laundry Room</fullName>
                </value>
                <value>
                    <fullName>Den</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Foyer/Vestibule</fullName>
                </value>
                <value>
                    <fullName>Recreation Room</fullName>
                </value>
                <value>
                    <fullName>Bonus Room</fullName>
                </value>
                <value>
                    <fullName>Attic</fullName>
                </value>
                <value>
                    <fullName>Basement</fullName>
                </value>
                <value>
                    <fullName>Sun Room</fullName>
                </value>
                <value>
                    <fullName>Garage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Cab_Depth__c</fullName>
        <label>Existing Cab Depth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Condition__c</fullName>
        <label>Existing Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Damage_Notes__c</fullName>
        <label>Existing Damage Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Damage__c</fullName>
        <label>Existing Damage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Damamage_Notes__c</fullName>
        <label>Existing Damamage Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Door_Type__c</fullName>
        <label>Existing Door Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nothing Existing</fullName>
                </value>
                <value>
                    <fullName>Prehung</fullName>
                </value>
                <value>
                    <fullName>Bi-Fold</fullName>
                </value>
                <value>
                    <fullName>Bi-Pass</fullName>
                </value>
                <value>
                    <fullName>Barn</fullName>
                </value>
                <value>
                    <fullName>Pocket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_ToeKick_Depth__c</fullName>
        <label>Existing ToeKick Depth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Type__c</fullName>
        <label>Existing Type?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_to_Remove__c</fullName>
        <label>Existing to Remove?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exterior_surrounding_the_door__c</fullName>
        <label>Exterior surrounding the door</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brick</fullName>
                </value>
                <value>
                    <fullName>Stucco</fullName>
                </value>
                <value>
                    <fullName>Stone</fullName>
                </value>
                <value>
                    <fullName>Composite</fullName>
                </value>
                <value>
                    <fullName>Shake</fullName>
                </value>
                <value>
                    <fullName>Vinyl</fullName>
                </value>
                <value>
                    <fullName>Aluminum</fullName>
                </value>
                <value>
                    <fullName>Wood</fullName>
                </value>
                <value>
                    <fullName>Sheetrock</fullName>
                </value>
                <value>
                    <fullName>Plaster</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Prep_Slab__c</fullName>
        <label>Field Prep Slab?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
</CustomObject>